--- a/app/src/main/res/layout/hot1_layout.xml
+++ b/app/src/main/res/layout/hot1_layout.xml
@@ -6,12 +6,18 @@
     android:layout_height="match_parent"
     tools:context="com.iiitd.purusharth.projectx.Hot1">
 
+    <include
+        layout="@layout/app_bar_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/align"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true">
+
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
@@ -29,6 +35,19 @@
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
         </android.support.design.widget.CollapsingToolbarLayout>
 
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="17dp"
+            android:layout_marginEnd="15dp"
+            android:clickable="true"
+
+            android:tint="#FFFFFF"
+            app:srcCompat="@drawable/ic_plus" />
+
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swipeRefresh"
             android:layout_width="match_parent"
@@ -38,4 +57,6 @@
         </android.support.v4.widget.SwipeRefreshLayout>
 
     </android.support.design.widget.CoordinatorLayout>
+
+
 </RelativeLayout>
