--- a/app/src/main/res/layout/my_activities_main.xml
+++ b/app/src/main/res/layout/my_activities_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.iiitd.purusharth.projectx.MainActivity">
+    tools:context="com.iiitd.purusharth.projectx.UserActivities">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
